--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -1,12 +1,20 @@
-$default-font: 'Open Sans';
+$default-font: 'San Francisco';
+$yellow: #fef378;
+
+@font-face {
+  font-family: 'San Francisco';
+  src: url("../fonts/SanFranciscoDisplay-Thin.otf");
+}
 
 body {
   font-family: $default-font, 'Helvetica', sans-serif;
-/*  background: black;
-  color: white;*/
+  background-image:  linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.75) ),url("../images/bkgnd_homepage.jpg");
+  background-size: cover;
+  color: white;
 }
 
 nav {
+  background: black;
   border: 1px solid hotpink;
   width: 65%;
   margin: 0 auto;
@@ -20,7 +28,7 @@ nav {
     li {
       display: inline;
       text-transform: uppercase;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
       padding-right: 25px;
       a {
         text-decoration: none;
@@ -30,33 +38,45 @@ nav {
   }
 }
 
-section {
-  border: 1px solid orchid;
+aside, article {
+  padding: 25px;
+  margin: 50px;
 }
 
 aside{
   border: 1px solid red;
   h4 {
     text-transform: uppercase;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
   }
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     li {
-
-      /*margin-left: 20px;*/
+      list-style-type: none;
+      margin-left: 0px;
+      padding-left: 0px;
+      display: inline-block;
       img {
         border-radius: 50%;
-        width: 25px;
-        height: 25px;
-        display: inline;
+        width: 50px;
+        height: 50px;
+        float: left;
+
+        /*display: inline;*/
       }
       p {
-        display: inline;
+        /*display: inline;*/
+        text-align: right;
+        display: inline-block;
+        padding: 0;
         span {
           display: block;
+          &:first-child {
+            color: $yellow;
+            float: left;
+          }
         }
       }
     }
@@ -64,16 +84,14 @@ aside{
 }
 
 .card {
-  border: 1px solid teal;
   height: 300px;
   display: inline-block;
-  background-image: url("http://www.tpevent.com/wp-content/uploads/2016/01/cute-cat-images-tpevent-10.jpg");
-  background-size: cover;
   box-shadow: 5px 5px 5px grey;
   padding: 15px;
   position: relative;
   margin-top: 25px;
   color: white;
+  background-size: cover;
 
   h2, p {
     position: absolute;
@@ -89,6 +107,22 @@ aside{
   p {
     bottom: 0;
   }
+}
+
+.card1 {
+  background-image: url("../images/bkgnd_ new_and_noteworthy.png");
+}
+
+.card2 {
+  background-image: url("../images/bkgnd_preorder.png");
+}
+
+.card3 {
+  background-image: url("../images/bkgnd_bestof2015.png");
+}
+
+.card4 {
+  background-image: url("../images/bkgnd_newartist.png");
 }
 
 .card-section {
