Make the footer responsive by stacking the links and making the footer sticky

--- a/src/stylesheets/stylez.css
+++ b/src/stylesheets/stylez.css
@@ -1,6 +1,13 @@
 @font-face {
   font-family: 'San Francisco';
   src: url("../fonts/SanFranciscoDisplay-Thin.otf"); }
+html, body {
+  height: 100%;
+  margin: 0; }
+
+.content {
+  min-height: calc(100vh - 160px); }
+
 body {
   font-family: "San Francisco", "Helvetica", sans-serif;
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.75)), url("../images/bkgnd_homepage.jpg");
@@ -116,17 +123,20 @@ aside {
   .card.card-section {
     width: 35%; } }
 footer {
-  bottom: 0;
-  position: absolute;
   width: 100%;
   background: black;
   text-align: center;
   color: #fef378;
-  padding: 2%;
-  font-size: .8em; }
+  font-size: .8em;
+  padding: 1%; }
   footer li {
     margin-left: 10px; }
     footer li:first-child {
       color: white; }
+
+@media (max-width: 650px) {
+  footer ul li {
+    display: block;
+    margin-bottom: 10px; } }
 
 /*# sourceMappingURL=stylez.css.map */
