--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -11,10 +11,14 @@ html, body {
   margin: 0;
 }
 
-
-
 .content {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.wrapper{
   min-height: calc(100vh - 160px);
+  /*margin: 2%;*/
 }
 
 
@@ -46,8 +50,8 @@ nav, footer {
 
 nav {
   background: black;
-  border: 1px solid hotpink;
-  width: 65%;
+  /*border: 1px solid hotpink;*/
+  width: 100%;
   margin: 0 auto;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -60,13 +64,18 @@ nav {
   }
 }
 
-aside, article {
-  padding: 25px;
-  margin: 50px;
+.left-section {
+  width: 50%;
+  height: 85vh;
+  display: inline;
+  border: 1px solid black; /*not exactly sure why this is needed to make both columns side by side*/
 }
 
-aside{
-  border: 1px solid red;
+.aside.right-section {
+  dispay: inline;
+  width: 19%;
+  float: right;
+  margin: 2%;
   h4 {
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -79,25 +88,20 @@ aside{
       list-style-type: none;
       margin-left: 0px;
       padding-left: 0px;
-      display: inline-block;
       img {
         border-radius: 50%;
         width: 50px;
         height: 50px;
         float: left;
-
-        /*display: inline;*/
+        margin-right: 15px;
       }
       p {
-        /*display: inline;*/
-        text-align: right;
         display: inline-block;
         padding: 0;
         span {
           display: block;
           &:first-child {
             color: $yellow;
-            float: left;
           }
         }
       }
@@ -105,10 +109,36 @@ aside{
   }
 }
 
+@media (max-width: 910px) {
+  .right-section.aside {
+    width: 100%;
+    float: left;
+    height: auto;
+  }
+}
+
+@media (max-width: 650px){
+  .left-section {
+    width: 100%;
+    float: left;
+    height: auto;
+  }
+
+  .right-section.aside {
+    ul {
+      margin-left: 10px;
+      li {
+        display: block;
+      }
+    }
+  }
+
+}
+
 .card {
   height: 300px;
   display: inline-block;
-  box-shadow: 5px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(128, 128, 128, 0.13);
   padding: 15px;
   position: relative;
   margin-top: 25px;
@@ -150,7 +180,7 @@ aside{
 .card-section {
   width: 100%;
   float: left;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
 }
 
 .card2, .card4 {
@@ -168,14 +198,13 @@ aside{
 
 @media (min-width: 650px) {
   .card.card-section {
-    width: 35%;
+    width: 33%;
   }
 }
 
 
 footer {
   width: 100%;
-  background: black;
   text-align: center;
   color: $yellow;
   font-size: .8em;
