--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -14,6 +14,7 @@ html, body {
 .content {
   width: 85%;
   margin: 0 auto;
+  overflow: auto;
 }
 
 .wrapper{
@@ -109,7 +110,7 @@ nav {
   }
 }
 
-@media (max-width: 910px) {
+@media (max-device-width: 910px) {
   .right-section.aside {
     width: 100%;
     float: left;
@@ -117,7 +118,7 @@ nav {
   }
 }
 
-@media (max-width: 650px){
+@media (max-device-width: 650px){
   .left-section {
     width: 100%;
     float: left;
@@ -187,7 +188,7 @@ nav {
   margin-left: 25px;
 }
 
-@media (max-width: 650px) {
+@media (max-device-width: 650px) {
   .card.card-section {
     margin-left: 0px;
   }
@@ -196,7 +197,7 @@ nav {
   }
 }
 
-@media (min-width: 650px) {
+@media (min-device-width: 650px) {
   .card.card-section {
     width: 33%;
   }
@@ -217,7 +218,7 @@ footer {
   }
 }
 
-@media (max-width: 650px) {
+@media (max-device-width: 650px) {
   footer ul li {
     display: block;
     margin-bottom: 10px;
