--- a/src/stylesheets/stylez.css
+++ b/src/stylesheets/stylez.css
@@ -12,7 +12,7 @@ html, body {
 
 .wrapper {
   min-height: calc(100vh - 160px);
-  /*margin: 2%;*/ }
+  margin-bottom: 2%; }
 
 body {
   font-family: "San Francisco", "Helvetica", sans-serif;
@@ -21,29 +21,48 @@ body {
   color: white; }
 
 /*horizontal nav,footer lists on homepage*/
-nav ul, footer ul {
+nav .nav-bar, footer ul {
   list-style-type: none;
   margin: 0;
   padding: 0; }
-  nav ul li, footer ul li {
+  nav .nav-bar li, footer ul li {
     display: inline;
     text-transform: uppercase;
-    letter-spacing: 1px; }
-    nav ul li a, footer ul li a {
+    /*letter-spacing: 1px;*/ }
+    nav .nav-bar li a, footer ul li a {
       text-decoration: none;
       color: inherit; }
 
 nav {
+  letter-spacing: 1px;
   background: black;
-  /*border: 1px solid hotpink;*/
   width: 100%;
   margin: 0 auto;
   padding-top: 15px;
   padding-bottom: 15px; }
-  nav ul {
+  nav ul.nav-bar {
     text-align: center; }
-    nav ul li {
+    nav ul.nav-bar li {
       padding-right: 25px; }
+  nav .mobile-nav {
+    display: none;
+    width: 90%;
+    margin: 0 auto; }
+    nav .mobile-nav .fa.fa-bars {
+      float: left; }
+    nav .mobile-nav .fa.fa-search {
+      float: right;
+      margin-top: -20px; }
+    nav .mobile-nav ul {
+      list-style-type: none; }
+      nav .mobile-nav ul li {
+        margin-bottom: 15px;
+        text-transform: uppercase; }
+        nav .mobile-nav ul li a {
+          color: inherit;
+          text-decoration: none; }
+  nav .mobile-nav.open .fa-bars, nav .mobile-nav.open .fa-search {
+    display: none; }
 
 .left-section {
   width: 50%;
@@ -160,5 +179,12 @@ footer {
   footer ul li {
     display: block;
     margin-bottom: 10px; } }
+/*mobile nav bar*/
+@media (max-device-width: 550px) {
+  .nav-bar {
+    display: none; }
+
+  .mobile-nav {
+    display: block; } }
 
 /*# sourceMappingURL=stylez.css.map */
