--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -35,7 +35,7 @@ body {
 nav .nav-bar, footer ul{  
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 15px;
   li {
     display: inline;
     text-transform: uppercase;
@@ -52,8 +52,10 @@ nav {
   background: black;
   width: 100%;
   margin: 0 auto;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  /*padding-top: 15px;
+  padding-bottom: 15px;*/
+  position: absolute;
+  z-index: 2;
   ul.nav-bar {
     text-align: center;
     li {
@@ -61,15 +63,28 @@ nav {
     }
   }
   .mobile-nav {
-    display: none;
-    width: 90%;
+    /*display: none;*/
+    /*position: absolute;*/
+    position: relative;
+    /*left: 0px;*/
+    top: 0px;
+    /*z-index: 1;*/
+    /*background: black;*/
+    width: 80%;
     margin: 0 auto;
+    padding: 25px 15px;
+    .fa {
+      margin-top: -5px;
+    }
     .fa.fa-bars {
       float: left;
     }
     .fa.fa-search {
       float: right;
-      margin-top: -20px;
+      /*margin-top: -20px;*/
+    }
+    .close-x {
+      display: none;
     }
     ul {
       list-style-type: none;
@@ -92,6 +107,7 @@ nav {
   }
 
 }
+
 
 .left-section {
   width: 50%;
@@ -229,6 +245,9 @@ nav {
   .card.card-section {
     width: 33%;
   }
+  .mobile-nav {
+    display: none;
+  }
 }
 
 
@@ -254,7 +273,7 @@ footer {
 }
 
 /*mobile nav bar*/
-@media (max-device-width: 550px) {
+@media (max-device-width: 650px) {
 
   .nav-bar {
     display: none;
@@ -262,5 +281,18 @@ footer {
 
   .mobile-nav {
     display: block;
+    ul {
+      display: none;
+    }
   }
+}
+
+/*animated menu sliding down*/
+.slide#responsive-nav {
+  transition:         height 500ms ease;
+  -moz-transition:    height 500ms ease;
+  -ms-transition:     height 500ms ease;
+  -o-transition:      height 500ms ease;
+  -webkit-transition: height 500ms ease;
+
 }
