--- a/src/stylesheets/stylez.css
+++ b/src/stylesheets/stylez.css
@@ -131,12 +131,12 @@ button#display-toggle {
   button#display-toggle:focus {
     outline: none; }
 
-@media (max-device-width: 910px) {
+@media (max-width: 910px) {
   .right-section.aside {
     width: 100%;
     float: left;
     height: auto; } }
-@media (max-device-width: 650px) {
+@media (max-width: 650px) {
   .left-section {
     width: 100%;
     float: left;
@@ -152,7 +152,7 @@ button#display-toggle {
   box-shadow: 5px 5px 5px rgba(128, 128, 128, 0.13);
   padding: 15px;
   position: relative;
-  margin-top: 25px;
+  margin-top: 60px;
   color: white;
   background-size: cover; }
   .card h2, .card p {
@@ -185,14 +185,14 @@ button#display-toggle {
 .card2, .card4 {
   margin-left: 25px; }
 
-@media (max-device-width: 650px) {
+@media (max-width: 650px) {
   .card.card-section {
     margin-left: 0px; }
 
   .card2, .card4 {
     margin-left: 0px; } }
 /*larger than mobile*/
-@media (min-device-width: 650px) {
+@media (min-width: 650px) {
   .card.card-section {
     width: 33%; }
 
@@ -212,12 +212,12 @@ footer {
     footer li:first-child {
       color: white; }
 
-@media (max-device-width: 650px) {
+@media (max-width: 650px) {
   footer ul li {
     display: block;
     margin-bottom: 10px; } }
 /*mobile view */
-@media (max-device-width: 650px) {
+@media (max-width: 650px) {
   .nav-bar {
     display: none; }
 
