--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -320,11 +320,14 @@ footer {
 }
 
 /*animated menu sliding down*/
-.slide#responsive-nav {
-  transition:         height 500ms ease;
-  -moz-transition:    height 500ms ease;
-  -ms-transition:     height 500ms ease;
-  -o-transition:      height 500ms ease;
-  -webkit-transition: height 500ms ease;
-
+#mobile-nav {
+  transition:height 1s ease-out;
+  height:0;
+  overflow:hidden;
 }
+
+#responsive-nav {
+  height:200px;
+  padding:20px;
+}
+
