Fix the album song image strectching by adding object-fit:cover to the img

--- a/src/stylesheets/stylez.scss
+++ b/src/stylesheets/stylez.scss
@@ -140,6 +140,7 @@ nav {
         height: 50px;
         float: left;
         margin-right: 15px;
+        object-fit: cover;
       }
 
       span {
