--- a/src/stylesheets/stylez.css
+++ b/src/stylesheets/stylez.css
@@ -106,7 +106,8 @@ nav {
         width: 50px;
         height: 50px;
         float: left;
-        margin-right: 15px; }
+        margin-right: 15px;
+        object-fit: cover; }
       .aside.right-section ul li span {
         display: block; }
         .aside.right-section ul li span:first-child {
